:ambulance: Fix "not showing same dates in archive" & change theme color!

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,7 +1,7 @@
 /** Theme Color Samples :) **/ 
-$color: #1D8E9B;
-$color-hover: #156770;
-$color-light: #5E9CA3;
+$color: #02b875;
+$color-hover: #1c9963;
+$color-light: #0b7;
 
  
 $container-width: 40rem; 
@@ -9,6 +9,6 @@ $container-width-plus: 42rem;
 
 $body-bg: #fff;
 
-$btn-success-bg: #5b5;
+$btn-success-bg: #1c9963;
 $btn-success-border-radius: .2rem;
 $btn-success-color: #fff;
